--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -254,12 +254,12 @@ body {
 }
 
 ::selection {
-  background: #820e05;
+  background: #9c2c34;
   color: #fff;
 }
 
 ::-moz-selection {
-  background: #820e05;
+  background: #9c2c34;
   color: #fff;
 }
 
@@ -283,7 +283,7 @@ body {
 .main-button-red a {
   font-size: 13px;
   color: #fff;
-  background-color: #f66b0e;
+  background-color: #9c2c34;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
@@ -299,7 +299,7 @@ body {
 .main-button-yellow a {
   font-size: 13px;
   color: #fff;
-  background-color: #f66b0e;
+  background-color: #9c2c34;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
@@ -342,7 +342,7 @@ header
   font-size: 13px;
 }
 
-.sub-header .right-icons {
+.sub-header .right-icons {  
   text-align: right;
   padding: 8px 0px;
 }
@@ -359,12 +359,12 @@ header
 }
 
 .sub-header .right-icons ul li a:hover {
-  color: #b9500a;
+  color: #9c2c34;
 }
 
 .sub-header .left-content p em {
   font-style: normal;
-  color: #b9500a;
+  color: #9c2c34;
 }
 
 .background-header {
@@ -387,11 +387,11 @@ header
 }
 
 .background-header .main-nav .nav li:hover a {
-  color: #fb5849 !important;
+  color: #9c2c34 !important;
 }
 
 .background-header .nav li a.active {
-  color: #fb5849 !important;
+  color: #9c2c34 !important;
 }
 
 .header-area {
@@ -426,7 +426,7 @@ header
   transition: all 0.3s ease 0s;
 }
 .header-area .main-nav .logo #subcolor {
-  color: #f66b0e;
+  color: #9c2c34;
 }
 
 .background-header .main-nav .logo {
@@ -477,12 +477,14 @@ header
 
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #f66b0e !important;
+  color: #9c2c34 !important;
+  text-shadow: 2px 2px 4px white;
+  font-weight: bold;
 }
 
 .background-header .main-nav .nav li:hover a,
 .background-header .main-nav .nav li a.active {
-  color: #f66b0e !important;
+  color: #9c2c34 !important;
   opacity: 1;
 }
 
@@ -496,6 +498,7 @@ header
   content: "\f107";
   font-size: 12px;
   color: #fff;
+  font-weight: bold;
   position: absolute;
   right: 5px;
   top: 12px;
@@ -544,7 +547,7 @@ header
 
 .header-area .main-nav .nav li.has-sub ul li a:hover {
   background: #fff;
-  color: #f66b0e !important;
+  color: #9c2c34 !important;
   padding-left: 25px;
 }
 
@@ -684,7 +687,7 @@ header
 }
 
 .header-area.header-sticky .nav li a.active {
-  color: #820e05;
+  color: #9c2c34;
 }
 
 @media (max-width: 1200px) {
@@ -703,7 +706,7 @@ header
   }
   .header-area.header-sticky .nav li a:hover,
   .header-area.header-sticky .nav li a.active {
-    color: #820e05 !important;
+    color: #9c2c34 !important;
     opacity: 1;
   }
   .header-area.header-sticky .nav li.search-icon a {
@@ -761,7 +764,7 @@ header
   }
   .header-area .main-nav .nav li a:hover {
     background: #eee !important;
-    color: #820e05 !important;
+    color: #9c2c34 !important;
   }
   .header-area .main-nav .nav li.has-sub ul.sub-menu {
     position: relative;
@@ -866,7 +869,7 @@ banner
 
 .main-banner .caption h2 em {
   font-style: normal;
-  color: #ce5607;
+  color: #9c2c34;
   font-weight: 900;
 }
 
@@ -1053,7 +1056,7 @@ section.upcoming-meetings .categories ul li a {
 }
 
 section.upcoming-meetings .categories ul li a:hover {
-  color: #f66b0e;
+  color: #9c2c34;
 }
 
 section.upcoming-meetings .categories .main-button-red {
@@ -1133,7 +1136,7 @@ section.upcoming-meetings .categories .main-button-red a {
   font-size: 13px;
   text-transform: uppercase;
   font-weight: 600;
-  color: #f66b0e;
+  color: #9c2c34;
 }
 
 .meeting-item .down-content .date span {
@@ -1223,7 +1226,7 @@ section.apply-now .item p {
   transition: transform 200ms ease-in-out;
 }
 .accordion-head.is-open {
-  color: #f66b0e;
+  color: #9c2c34;
   border-bottom: none;
 }
 .accordion-head.is-open .icon {
@@ -1278,12 +1281,12 @@ section.our-courses {
 }
 
 .our-courses .item .down-content .info ul li i {
-  color: #ce5606;
+  color: #9c2c34;
   font-size: 14px;
 }
 
 .our-courses .item .down-content .info span {
-  color: #f66b0e;
+  color: #9c2c34;
   font-size: 15px;
   font-weight: 600;
   text-align: right;
@@ -1426,7 +1429,7 @@ section.our-facts h2 {
 
 .count-digit {
   margin: 5px 0px;
-  color: #ee8037;
+  color: #9c2c34;
   font-weight: 700;
   font-size: 36px;
 }
@@ -1521,7 +1524,7 @@ section.contact-us #contact textarea {
 section.contact-us #contact button {
   font-size: 13px;
   color: #fff;
-  background-color: #f66b0e;
+  background-color: #9c2c34;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
@@ -1537,7 +1540,7 @@ section.contact-us #contact button:hover {
 }
 
 section.contact-us .right-info {
-  background-color: #da5c08;
+  background-color: #9c2c34;
   border-radius: 20px;
   padding: 40px;
 }
@@ -1578,11 +1581,13 @@ section.contact-us .right-info ul li span {
 .footer p {
   text-transform: uppercase;
   font-size: 14px;
-  color: #fff;
+  color: #9c2c34;
+  font-weight: bold;
+  text-shadow: 2px 2px 2px white;
 }
 
 .footer p a {
-  color: #820e05;
+  color: #9c2c34;
 }
 
 /*
@@ -1643,7 +1648,7 @@ section.meetings-page .filters {
 
 section.meetings-page .filters li {
   font-size: 13px;
-  color: #f66b0e;
+  color: #9c2c34;
   background-color: #fff;
   padding: 11px 30px;
   display: inline-block;
@@ -1657,7 +1662,7 @@ section.meetings-page .filters li {
 
 section.meetings-page .filters ul li.active,
 section.meetings-page .filters ul li:hover {
-  background-color: #f66b0e;
+  background-color: #9c2c34;
   color: #fff;
 }
 
@@ -1698,7 +1703,7 @@ section.meetings-page .main-button-red a {
 
 section.meetings-page .pagination ul li.active a,
 section.meetings-page .pagination ul li a:hover {
-  background-color: #a12c2f;
+  background-color: #9c2c34;
   color: #fff;
 }
 
@@ -1749,7 +1754,7 @@ section.meetings-page .pagination ul li a:hover {
   font-size: 13px;
   text-transform: uppercase;
   font-weight: 600;
-  color: #f66b0e;
+  color: #9c2c34;
 }
 
 .meeting-single-item .thumb .date span {
@@ -1812,7 +1817,7 @@ section.meetings-page .pagination ul li a:hover {
 }
 
 .meeting-single-item .down-content .share ul li a:hover {
-  color: #820e05;
+  color: #9c2c34;
 }
 
 /* Meeting item column */
