--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -342,7 +342,7 @@ header
   font-size: 13px;
 }
 
-.sub-header .right-icons {  
+.sub-header .right-icons {
   text-align: right;
   padding: 8px 0px;
 }
@@ -460,9 +460,10 @@ header
 }
 
 .header-area .main-nav .nav li a {
+  font-family: "Gilda Display", serif;
   display: block;
-  font-weight: 500;
-  font-size: 14px;
+  font-weight: bold;
+  font-size: 16px;
   text-transform: uppercase;
   color: #ffffff;
   -webkit-transition: all 0.3s ease 0s;
@@ -473,18 +474,18 @@ header
   line-height: 40px;
   border: transparent;
   letter-spacing: 1px;
+  text-shadow: 4px 4px 14px #edae49;
 }
 
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #9c2c34 !important;
-  text-shadow: 2px 2px 4px white;
+  color: #b0413e !important;
   font-weight: bold;
 }
 
 .background-header .main-nav .nav li:hover a,
 .background-header .main-nav .nav li a.active {
-  color: #9c2c34 !important;
+  color: #b0413e !important;
   opacity: 1;
 }
 
@@ -826,7 +827,6 @@ banner
   max-height: 100vh;
   object-fit: cover;
   z-index: -1;
-  opacity: 0.6;
 }
 
 #bg-video::-webkit-media-controls {
@@ -835,7 +835,7 @@ banner
 
 .video-overlay {
   position: absolute;
-  background-color: rgba(51, 77, 80, 0.75);
+  background-color: rgba(51, 51, 51, 0.85);
   top: 0;
   left: 0;
   bottom: 0;
@@ -859,15 +859,15 @@ banner
 }
 
 .main-banner .caption h2 {
-  margin-top: -100px;
+  margin-top: -200px;
   margin-bottom: 20px;
   font-size: 40px;
   text-transform: uppercase;
   font-weight: 900;
-  color: #E5CEDC;
+  color: #eaf2e3;
   letter-spacing: 1px;
   text-shadow: 4px 4px 14px #454955;
-  font-family: 'Signika', sans-serif;
+  font-family: "Signika", sans-serif;
 }
 
 .main-banner .caption h2 em {
@@ -877,11 +877,14 @@ banner
 }
 
 .main-banner .caption p {
-  color: #FFE1A8;
-  font-size: 14px;
+  color: #caffd0;
+  font-size: 20px;
   font-weight: bold;
-  max-width: 800px;
-  text-shadow: 4px 4px 14px #E26D5C;
+  max-width: 70%;
+  text-align: justify;
+  line-height: 1cm;
+  text-shadow: 4px 4px 14px #e26d5c;
+  font-family: "Work Sans", sans-serif;
 }
 
 .main-banner .caption .main-button-red {
@@ -905,7 +908,7 @@ services
 */
 
 .services {
-  margin-top: -135px;
+  margin-top: -250px;
   position: absolute;
   width: 100%;
 }
@@ -914,7 +917,7 @@ services
   background-image: url(../images/back_Card3.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center; 
+  background-position: center center;
   border-radius: 20px;
   text-align: center;
   color: #fff;
@@ -1985,10 +1988,10 @@ section.events {
   background-size: cover;
 }
 
-section.events .section-heading{
+section.events .section-heading {
   text-align: center;
 }
 
-.new-news{
-  width:20%;
+.new-news {
+  width: 20%;
 }
