--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -254,12 +254,12 @@ body {
 }
 
 ::selection {
-  background: #9c2c34;
+  background: #820e05;
   color: #fff;
 }
 
 ::-moz-selection {
-  background: #9c2c34;
+  background: #820e05;
   color: #fff;
 }
 
@@ -283,7 +283,7 @@ body {
 .main-button-red a {
   font-size: 13px;
   color: #fff;
-  background-color: #9c2c34;
+  background-color: #f66b0e;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
@@ -299,7 +299,7 @@ body {
 .main-button-yellow a {
   font-size: 13px;
   color: #fff;
-  background-color: #9c2c34;
+  background-color: #f66b0e;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
@@ -359,12 +359,12 @@ header
 }
 
 .sub-header .right-icons ul li a:hover {
-  color: #9c2c34;
+  color: #b9500a;
 }
 
 .sub-header .left-content p em {
   font-style: normal;
-  color: #9c2c34;
+  color: #b9500a;
 }
 
 .background-header {
@@ -387,11 +387,11 @@ header
 }
 
 .background-header .main-nav .nav li:hover a {
-  color: #9c2c34 !important;
+  color: #fb5849 !important;
 }
 
 .background-header .nav li a.active {
-  color: #9c2c34 !important;
+  color: #fb5849 !important;
 }
 
 .header-area {
@@ -426,7 +426,7 @@ header
   transition: all 0.3s ease 0s;
 }
 .header-area .main-nav .logo #subcolor {
-  color: #9c2c34;
+  color: #f66b0e;
 }
 
 .background-header .main-nav .logo {
@@ -460,10 +460,9 @@ header
 }
 
 .header-area .main-nav .nav li a {
-  font-family: "Gilda Display", serif;
   display: block;
-  font-weight: bold;
-  font-size: 16px;
+  font-weight: 500;
+  font-size: 14px;
   text-transform: uppercase;
   color: #ffffff;
   -webkit-transition: all 0.3s ease 0s;
@@ -474,18 +473,16 @@ header
   line-height: 40px;
   border: transparent;
   letter-spacing: 1px;
-  text-shadow: 4px 4px 14px #edae49;
 }
 
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #b0413e !important;
-  font-weight: bold;
+  color: #f66b0e !important;
 }
 
 .background-header .main-nav .nav li:hover a,
 .background-header .main-nav .nav li a.active {
-  color: #b0413e !important;
+  color: #f66b0e !important;
   opacity: 1;
 }
 
@@ -499,7 +496,6 @@ header
   content: "\f107";
   font-size: 12px;
   color: #fff;
-  font-weight: bold;
   position: absolute;
   right: 5px;
   top: 12px;
@@ -548,7 +544,7 @@ header
 
 .header-area .main-nav .nav li.has-sub ul li a:hover {
   background: #fff;
-  color: #9c2c34 !important;
+  color: #f66b0e !important;
   padding-left: 25px;
 }
 
@@ -688,7 +684,7 @@ header
 }
 
 .header-area.header-sticky .nav li a.active {
-  color: #9c2c34;
+  color: #820e05;
 }
 
 @media (max-width: 1200px) {
@@ -707,7 +703,7 @@ header
   }
   .header-area.header-sticky .nav li a:hover,
   .header-area.header-sticky .nav li a.active {
-    color: #9c2c34 !important;
+    color: #820e05 !important;
     opacity: 1;
   }
   .header-area.header-sticky .nav li.search-icon a {
@@ -765,7 +761,7 @@ header
   }
   .header-area .main-nav .nav li a:hover {
     background: #eee !important;
-    color: #9c2c34 !important;
+    color: #820e05 !important;
   }
   .header-area .main-nav .nav li.has-sub ul.sub-menu {
     position: relative;
@@ -835,7 +831,7 @@ banner
 
 .video-overlay {
   position: absolute;
-  background-color: rgba(51, 51, 51, 0.85);
+  background-color: rgba(51, 77, 80, 0.75);
   top: 0;
   left: 0;
   bottom: 0;
@@ -859,32 +855,25 @@ banner
 }
 
 .main-banner .caption h2 {
-  margin-top: -200px;
+  margin-top: 20px;
   margin-bottom: 20px;
-  font-size: 40px;
+  font-size: 36px;
   text-transform: uppercase;
-  font-weight: 900;
-  color: #eaf2e3;
+  font-weight: 800;
+  color: #fff;
   letter-spacing: 1px;
-  text-shadow: 4px 4px 14px #454955;
-  font-family: "Signika", sans-serif;
 }
 
 .main-banner .caption h2 em {
   font-style: normal;
-  color: #9c2c34;
+  color: #ce5607;
   font-weight: 900;
 }
 
 .main-banner .caption p {
-  color: #caffd0;
-  font-size: 20px;
-  font-weight: bold;
-  max-width: 70%;
-  text-align: justify;
-  line-height: 1cm;
-  text-shadow: 4px 4px 14px #e26d5c;
-  font-family: "Work Sans", sans-serif;
+  color: #fff;
+  font-size: 14px;
+  max-width: 570px;
 }
 
 .main-banner .caption .main-button-red {
@@ -908,13 +897,13 @@ services
 */
 
 .services {
-  margin-top: -250px;
+  margin-top: -135px;
   position: absolute;
   width: 100%;
 }
 
 .services .item {
-  background-image: url(../images/back_Card3.jpg);
+  background-image: url(../images/service-item-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -925,9 +914,7 @@ services
 }
 
 .services .item .icon {
-  max-width: 80px;
-  background-color: white;
-  border-radius: 50%;
+  max-width: 60px;
   margin: 0 auto;
 }
 
@@ -1029,8 +1016,8 @@ section.upcoming-meetings {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-top: 250px;
-  padding-bottom: 80px;
+  padding-top: 230px;
+  padding-bottom: 110px;
 }
 
 section.upcoming-meetings .section-heading {
@@ -1041,12 +1028,13 @@ section.upcoming-meetings .categories {
   background-color: #fff;
   border-radius: 20px;
   padding: 40px;
+  margin-right: 45px;
 }
 
 section.upcoming-meetings .categories h4 {
   font-size: 18px;
   font-weight: 600;
-  color: #642221;
+  color: #1f272b;
   margin-bottom: 30px;
   padding-bottom: 20px;
   border-bottom: 1px solid #eee;
@@ -1065,7 +1053,7 @@ section.upcoming-meetings .categories ul li a {
 }
 
 section.upcoming-meetings .categories ul li a:hover {
-  color: #9c2c34;
+  color: #f66b0e;
 }
 
 section.upcoming-meetings .categories .main-button-red {
@@ -1083,16 +1071,6 @@ section.upcoming-meetings .categories .main-button-red a {
   margin-bottom: 30px;
 }
 
-.meeting-item .title {
-  background-color: #642221;
-  color: #fff;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  min-height: 7vh;
-  padding: 20px;
-  font-size: large;
-  font-weight: bold;
-}
 .meeting-item .thumb {
   position: relative;
 }
@@ -1124,16 +1102,6 @@ section.upcoming-meetings .categories .main-button-red a {
   border-bottom-left-radius: 20px;
 }
 
-.down-item .flex-item {
-  display: flex;
-  align-items: center;
-}
-
-.down-item .flex-item .img {
-  flex-grow: 0;
-  flex-shrink: 0;
-}
-
 .meeting-item .down-content .date {
   float: left;
   text-align: center;
@@ -1145,7 +1113,7 @@ section.upcoming-meetings .categories .main-button-red a {
   font-size: 13px;
   text-transform: uppercase;
   font-weight: 600;
-  color: #9c2c34;
+  color: #f66b0e;
 }
 
 .meeting-item .down-content .date span {
@@ -1235,7 +1203,7 @@ section.apply-now .item p {
   transition: transform 200ms ease-in-out;
 }
 .accordion-head.is-open {
-  color: #9c2c34;
+  color: #f66b0e;
   border-bottom: none;
 }
 .accordion-head.is-open .icon {
@@ -1290,12 +1258,12 @@ section.our-courses {
 }
 
 .our-courses .item .down-content .info ul li i {
-  color: #9c2c34;
+  color: #ce5606;
   font-size: 14px;
 }
 
 .our-courses .item .down-content .info span {
-  color: #9c2c34;
+  color: #f66b0e;
   font-size: 15px;
   font-weight: 600;
   text-align: right;
@@ -1438,7 +1406,7 @@ section.our-facts h2 {
 
 .count-digit {
   margin: 5px 0px;
-  color: #9c2c34;
+  color: #ee8037;
   font-weight: 700;
   font-size: 36px;
 }
@@ -1533,7 +1501,7 @@ section.contact-us #contact textarea {
 section.contact-us #contact button {
   font-size: 13px;
   color: #fff;
-  background-color: #9c2c34;
+  background-color: #f66b0e;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
@@ -1549,7 +1517,7 @@ section.contact-us #contact button:hover {
 }
 
 section.contact-us .right-info {
-  background-color: #9c2c34;
+  background-color: #da5c08;
   border-radius: 20px;
   padding: 40px;
 }
@@ -1590,13 +1558,11 @@ section.contact-us .right-info ul li span {
 .footer p {
   text-transform: uppercase;
   font-size: 14px;
-  color: #9c2c34;
-  font-weight: bold;
-  text-shadow: 2px 2px 2px white;
+  color: #fff;
 }
 
 .footer p a {
-  color: #9c2c34;
+  color: #820e05;
 }
 
 /*
@@ -1657,7 +1623,7 @@ section.meetings-page .filters {
 
 section.meetings-page .filters li {
   font-size: 13px;
-  color: #9c2c34;
+  color: #f66b0e;
   background-color: #fff;
   padding: 11px 30px;
   display: inline-block;
@@ -1671,7 +1637,7 @@ section.meetings-page .filters li {
 
 section.meetings-page .filters ul li.active,
 section.meetings-page .filters ul li:hover {
-  background-color: #9c2c34;
+  background-color: #f66b0e;
   color: #fff;
 }
 
@@ -1712,7 +1678,7 @@ section.meetings-page .main-button-red a {
 
 section.meetings-page .pagination ul li.active a,
 section.meetings-page .pagination ul li a:hover {
-  background-color: #9c2c34;
+  background-color: #a12c2f;
   color: #fff;
 }
 
@@ -1763,7 +1729,7 @@ section.meetings-page .pagination ul li a:hover {
   font-size: 13px;
   text-transform: uppercase;
   font-weight: 600;
-  color: #9c2c34;
+  color: #f66b0e;
 }
 
 .meeting-single-item .thumb .date span {
@@ -1826,7 +1792,7 @@ section.meetings-page .pagination ul li a:hover {
 }
 
 .meeting-single-item .down-content .share ul li a:hover {
-  color: #9c2c34;
+  color: #820e05;
 }
 
 /* Meeting item column */
@@ -1978,18 +1944,6 @@ responsive
 
 .justifyMe {
   text-align: justify;
-}
-
-section.events {
-  /*background-image: url(../images/meetings-bg.jpg);*/
-  background-position: center center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-section.events .section-heading {
-  text-align: center;
 }
 
 .new-news {
