--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -283,7 +283,7 @@ body {
 .main-button-red a {
   font-size: 13px;
   color: #fff;
-  background-color: #f66b0e;
+  background-color: #9C2C34;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
@@ -314,7 +314,7 @@ body {
 
 .section-heading h2 {
   line-height: 40px;
-  margin-top: 0px;
+  margin-top:-90px;
   margin-bottom: 50px;
   padding-bottom: 20px;
   border-bottom: 1px solid rgba(250, 250, 250, 0.15);
@@ -359,12 +359,12 @@ header
 }
 
 .sub-header .right-icons ul li a:hover {
-  color: #b9500a;
+  color: #9C2C34;
 }
 
 .sub-header .left-content p em {
   font-style: normal;
-  color: #b9500a;
+  color: #9C2C34;
 }
 
 .background-header {
@@ -387,11 +387,11 @@ header
 }
 
 .background-header .main-nav .nav li:hover a {
-  color: #fb5849 !important;
+  color: #9C2C34 !important;
 }
 
 .background-header .nav li a.active {
-  color: #fb5849 !important;
+  color: #9C2C34 !important;
 }
 
 .header-area {
@@ -435,7 +435,7 @@ header
   transition: all 0.3s ease 0s;
 }
 .header-area .main-nav .logo #subcolor {
-  color: #f66b0e;
+  color: #9C2C34;
 }
 
 .background-header .main-nav .logo {
@@ -449,7 +449,7 @@ header
 .header-area .main-nav .nav {
   float: right;
   margin-top: 30px;
-  margin-right: 0px;
+  margin-right: 99px;
   background-color: transparent;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
@@ -486,12 +486,12 @@ header
 
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #f66b0e !important;
+  color: #9C2C34 !important;
 }
 
 .background-header .main-nav .nav li:hover a,
 .background-header .main-nav .nav li a.active {
-  color: #f66b0e !important;
+  color: #9C2C34 !important;
   opacity: 1;
 }
 
@@ -553,7 +553,7 @@ header
 
 .header-area .main-nav .nav li.has-sub ul li a:hover {
   background: #fff;
-  color: #f66b0e !important;
+  color: #9C2C34 !important;
   padding-left: 25px;
 }
 
@@ -842,7 +842,7 @@ banner
 
 .video-overlay {
   position: absolute;
-  background-color: rgba(51, 77, 80, 0.75);
+  background-color: rgba(0, 23, 26, 0.85);
   top: 0;
   left: 0;
   bottom: 0;
@@ -1959,4 +1959,29 @@ responsive
 
 .new-news {
   width: 20%;
+}
+
+.title-heading{
+  background-color: #9C2C34;
+color: white;
+height: 50px;
+border-top-left-radius: 20px;
+padding-left: 30px;
+padding-top: 10px;
+border-top-right-radius: 20px;
+
+}
+#slideshow { 
+  margin: 50px auto; 
+  position: relative; 
+  padding: 10px; 
+  box-shadow: 0 0 20px rgba(0,0,0,0.4); 
+}
+
+#slideshow > div { 
+  position: absolute; 
+  top: 10px; 
+  left: 10px; 
+  right: 10px; 
+  bottom: 10px; 
 }
