--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -283,7 +283,7 @@ body {
 .main-button-red a {
   font-size: 13px;
   color: #fff;
-  background-color: #9C2C34;
+  background-color: #9c2c34;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
@@ -314,7 +314,7 @@ body {
 
 .section-heading h2 {
   line-height: 40px;
-  margin-top:-90px;
+  margin-top: -90px;
   margin-bottom: 50px;
   padding-bottom: 20px;
   border-bottom: 1px solid rgba(250, 250, 250, 0.15);
@@ -359,12 +359,12 @@ header
 }
 
 .sub-header .right-icons ul li a:hover {
-  color: #9C2C34;
+  color: #9c2c34;
 }
 
 .sub-header .left-content p em {
   font-style: normal;
-  color: #9C2C34;
+  color: #9c2c34;
 }
 
 .background-header {
@@ -387,11 +387,11 @@ header
 }
 
 .background-header .main-nav .nav li:hover a {
-  color: #9C2C34 !important;
+  color: #9c2c34 !important;
 }
 
 .background-header .nav li a.active {
-  color: #9C2C34 !important;
+  color: #9c2c34 !important;
 }
 
 .header-area {
@@ -426,16 +426,16 @@ header
 .header-area .main-nav .text-logo {
   height: 80px;
   width: auto;
-  float: left;  
+  float: left;
   padding: 5px;
-  margin-top:10px;
+  margin-top: 10px;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 .header-area .main-nav .logo #subcolor {
-  color: #9C2C34;
+  color: #9c2c34;
 }
 
 .background-header .main-nav .logo {
@@ -486,12 +486,12 @@ header
 
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #9C2C34 !important;
+  color: #9c2c34 !important;
 }
 
 .background-header .main-nav .nav li:hover a,
 .background-header .main-nav .nav li a.active {
-  color: #9C2C34 !important;
+  color: #9c2c34 !important;
   opacity: 1;
 }
 
@@ -553,7 +553,7 @@ header
 
 .header-area .main-nav .nav li.has-sub ul li a:hover {
   background: #fff;
-  color: #9C2C34 !important;
+  color: #9c2c34 !important;
   padding-left: 25px;
 }
 
@@ -852,7 +852,7 @@ banner
 
 .main-banner .caption {
   position: absolute;
-  top: 50%;
+  top: 30%;
   transform: translateY(-50%);
 }
 
@@ -922,6 +922,10 @@ services
   text-align: center;
   color: #fff;
   padding: 40px;
+  box-shadow: 10px 10px 5px #ccc;
+  -moz-box-shadow: 10px 10px 5px #ccc;
+  -webkit-box-shadow: 10px 10px 5px #ccc;
+  -khtml-box-shadow: 10px 10px 5px #ccc;
 }
 
 .services .item .icon {
@@ -1124,7 +1128,7 @@ section.upcoming-meetings .categories .main-button-red a {
   font-size: 13px;
   text-transform: uppercase;
   font-weight: 600;
-  color: #f66b0e;
+  color: #9c2c34;
 }
 
 .meeting-item .down-content .date span {
@@ -1891,7 +1895,7 @@ responsive
 
 @media (max-width: 992px) {
   .main-banner .caption {
-    top: 60%;
+    top: 63%;
   }
 
   .main-banner .caption h2 {
@@ -1961,27 +1965,43 @@ responsive
   width: 20%;
 }
 
-.title-heading{
-  background-color: #9C2C34;
-color: white;
-height: 50px;
-border-top-left-radius: 20px;
-padding-left: 30px;
-padding-top: 10px;
-border-top-right-radius: 20px;
-
+.title-heading {
+  background-color: #9c2c34;
+  color: white;
+  height: 50px;
+  border-top-left-radius: 20px;
+  padding-left: 30px;
+  padding-top: 10px;
+  border-top-right-radius: 20px;
 }
-#slideshow { 
-  margin: 50px auto; 
-  position: relative; 
-  padding: 10px; 
-  box-shadow: 0 0 20px rgba(0,0,0,0.4); 
+#slideshow {
+  margin: 50px auto;
+  position: relative;
+  padding: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
 
-#slideshow > div { 
-  position: absolute; 
-  top: 10px; 
-  left: 10px; 
-  right: 10px; 
-  bottom: 10px; 
+#slideshow > div {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+}
+.slider img {
+  width: 100%;
+  height: 300px;
+}
+
+@media (max-width: 992px) {
+  .slider img {
+    height: 200px;
+  }
+}
+
+@media (max-width: 992px) {
+  .meeting-item .down-content p {
+    margin-left: 0px;
+    text-align: justify;
+  }
 }
