--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -397,7 +397,7 @@ header
 .header-area {
   /*background-color: rgba(250, 250, 250, 0.15);*/
   position: absolute;
-  top: 40px;
+  top: 65px;
   left: 0;
   right: 0;
   z-index: 100;
@@ -449,7 +449,7 @@ header
 .header-area .main-nav .nav {
   float: right;
   margin-top: 30px;
-  margin-right: 99px;
+  margin-right: 15%;
   background-color: transparent;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
@@ -822,7 +822,7 @@ banner
 
 .main-banner {
   position: relative;
-  max-height: 100%;
+  max-height: 70%;
   overflow: hidden;
   margin-bottom: -7px;
 }
@@ -866,8 +866,8 @@ banner
 }
 
 .main-banner .caption h2 {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 300px;
+  margin-bottom: 48px;
   font-size: 36px;
   text-transform: uppercase;
   font-weight: 800;
@@ -884,7 +884,8 @@ banner
 .main-banner .caption p {
   color: #fff;
   font-size: 14px;
-  max-width: 570px;
+  max-width: 55%;
+  margin-right: 20px;
 }
 
 .main-banner .caption .main-button-red {
@@ -922,10 +923,6 @@ services
   text-align: center;
   color: #fff;
   padding: 40px;
-  box-shadow: 10px 10px 5px #ccc;
-  -moz-box-shadow: 10px 10px 5px #ccc;
-  -webkit-box-shadow: 10px 10px 5px #ccc;
-  -khtml-box-shadow: 10px 10px 5px #ccc;
 }
 
 .services .item .icon {
