--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -299,7 +299,7 @@ body {
 .main-button-yellow a {
   font-size: 13px;
   color: #fff;
-  background-color: #f66b0e;
+  background-color: #9c2c34;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
@@ -1172,13 +1172,15 @@ section.apply-now {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 140px 0px;
+  padding: 140px 0px 30px 0px;
+ 
 }
 
 section.apply-now .item {
   background-color: rgba(250, 250, 250, 0.15);
   padding: 40px;
   margin-bottom: 30px;
+  border-radius: 20px;
 }
 
 section.apply-now .item h3 {
@@ -1226,7 +1228,7 @@ section.apply-now .item p {
   transition: transform 200ms ease-in-out;
 }
 .accordion-head.is-open {
-  color: #f66b0e;
+  color: #9c2c34;
   border-bottom: none;
 }
 .accordion-head.is-open .icon {
@@ -1574,7 +1576,6 @@ section.contact-us .right-info ul li span {
 
 .footer {
   text-align: center;
-  margin-top: 140px;
   border-top: 1px solid rgba(250, 250, 250, 0.15);
   padding: 50px 0px;
 }
