--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -396,6 +396,7 @@ header
 
 .header-area {
   /*background-color: rgba(250, 250, 250, 0.15);*/
+  background-color: rgba(250, 250, 250, 0.15);
   position: absolute;
   top: 40px;
   left: 0;
@@ -1075,7 +1076,7 @@ section.upcoming-meetings .categories ul li a {
 }
 
 section.upcoming-meetings .categories ul li a:hover {
-  color: #f66b0e;
+  color: #9c2c34;
 }
 
 section.upcoming-meetings .categories .main-button-red {
@@ -1261,6 +1262,8 @@ section.our-courses {
 
 .our-courses .item .down-content {
   background-color: #fff;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 .our-courses .item .down-content h4 {
