--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -2143,6 +2143,10 @@ input:checked + .box .box-close {
   font-size: 14px;
   font-weight: 500;
 }
+.arrows section .box-title:hover {
+  color: #9c2c34;
+  cursor: pointer;
+}
 .arrows section .box-title:before {
   position: absolute;
   display: block;
@@ -2160,3 +2164,5 @@ input:checked + section.box .box-title:before {
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 }
+
+/* Testimonial CSS */
