--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -2267,3 +2267,16 @@ div.eligibility img {
     width: 90%;
   }
 }
+
+/* testimonial items */
+.testimonial-item {
+  height: 300px;
+  /* From https://css.glass */
+  background: rgba(156, 44, 52, 0.3);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.1px);
+  -webkit-backdrop-filter: blur(6.1px);
+  border: 1px solid rgba(156, 44, 52, 0.71);
+  border: 1px solid rgba(156, 44, 52, 0.26);
+}
