--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -463,10 +463,23 @@ header
   position: relative;
   z-index: 999;
 }
+@media (max-width: 1399px) {
+  .header-area .main-nav .nav {
+    margin-right: 5%;
+  }
+}
 
 .header-area .main-nav .nav li {
   padding-left: 15px;
   padding-right: 15px;
+}
+@media (max-width: 1399px) {
+  .header-area .main-nav .nav li:nth-of-type(1) {
+    padding-left: 5px;
+  }
+  .header-area .main-nav .nav li {
+    padding-right: 10px;
+  }
 }
 
 .header-area .main-nav .nav li:last-child {
@@ -2270,24 +2283,25 @@ div.eligibility img {
 
 /* testimonial items */
 .testimonial-item {
-  height: 420px;
+  height: 400px;
   /* From https://css.glass */
-  background: rgba(97, 120, 76, 0.3);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(6.1px);
-  -webkit-backdrop-filter: blur(6.1px);
-  border: 1px solid rgba(97, 120, 76, 0.71);
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
+@media (max-width: 1399px) {
+  .testimonial-item {
+    height: 400px;
+  }
+}
 .testimonial-item img {
-  width: 100px;
+  width: 150px;
+  height: auto;
   border-radius: 50%;
 }
-.testimonial-item h2 {
+.testimonial-item h5 {
   color: #9c2c34;
   font-family: "Great Vibes", cursive;
   font-weight: bold;
@@ -2296,9 +2310,16 @@ div.eligibility img {
   text-shadow: 0 1px 1px #fff;
 }
 .testimonial-item p {
+  background: rgba(97, 120, 76, 0.3);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(6.1px);
+  -webkit-backdrop-filter: blur(6.1px);
+  border: 1px solid rgba(97, 120, 76, 0.71);
   padding: 10px;
   color: #ffffff;
   text-shadow: 1px 1px 1px #9c2c34;
+  font-size: 12px;
   line-height: 1.2rem;
   font-weight: bold;
   text-align: justify;
@@ -2311,17 +2332,17 @@ div.eligibility img {
   font-family: "Lobster Two", cursive;
 }
 .testimonial-item > span:nth-of-type(1) {
-  font-size: 1.2rem;
+  font-size: 14px;
   color: #9c2c34;
   text-shadow: 0 1px 1px #fff;
   font-style: italic;
 }
 .testimonial-item > span:nth-of-type(1) > img {
-  width: 50px;
+  width: 30px;
   text-shadow: 1px 1px 1px #fff;
 }
 .testimonial-item > span:nth-of-type(2) {
-  font-size: 1.3rem;
+  font-size: 14px;
   color: #cef0d4;
   text-shadow: 0 1px 1px #9c2c34;
   font-style: italic;
