--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -345,6 +345,11 @@ header
   padding: 8px 0px;
   font-size: 13px;
 }
+@media (max-width: 1199px) {
+  .sub-header .left-content p {
+    font-size: 12px;
+  }
+}
 
 .sub-header .right-icons {
   text-align: right;
@@ -353,7 +358,7 @@ header
 
 .sub-header .right-icons ul li {
   display: inline-block;
-  margin-left: 15px;
+  margin-left: 10px;
 }
 
 .sub-header .right-icons ul li a {
@@ -469,6 +474,12 @@ header
   }
 }
 
+@media (max-width: 1199px) {
+  .header-area .main-nav .nav {
+    margin-right: 0;
+  }
+}
+
 .header-area .main-nav .nav li {
   padding-left: 15px;
   padding-right: 15px;
@@ -479,6 +490,14 @@ header
   }
   .header-area .main-nav .nav li {
     padding-right: 10px;
+  }
+}
+@media (max-width: 1199px) {
+  .header-area .main-nav .nav li:nth-of-type(1) {
+    padding-left: 0;
+  }
+  .header-area .main-nav .nav li {
+    padding-right: 0;
   }
 }
 
@@ -502,6 +521,11 @@ header
   letter-spacing: 1px;
 }
 
+@media (max-width: 1199px) {
+  .header-area .main-nav .nav li a {
+    font-size: 12px;
+  }
+}
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
   color: #9c2c34 !important;
@@ -2291,6 +2315,17 @@ div.eligibility img {
   align-items: center;
   justify-content: center;
 }
+
+.success-stories {
+  width: 70px;
+}
+
+@media (max-width: 992px) {
+  .success-stories {
+    width: 10%;
+  }
+}
+
 @media (max-width: 1399px) {
   .testimonial-item {
     height: 400px;
