--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -157,7 +157,7 @@ body {
 }
 a {
   text-decoration: none !important;
-  color: #9c2c34;
+  color: #6f0000;
   font-weight: bold;
 }
 
@@ -287,7 +287,7 @@ body {
 .main-button-red a {
   font-size: 13px;
   color: #fff;
-  background-color: #9c2c34;
+  background-color: #6f0000;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
@@ -303,7 +303,7 @@ body {
 .main-button-yellow a {
   font-size: 13px;
   color: #fff;
-  background-color: #9c2c34;
+  background-color: #6f0000;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
@@ -368,12 +368,12 @@ header
 }
 
 .sub-header .right-icons ul li a:hover {
-  color: #9c2c34;
+  color: #6f0000;
 }
 
 .sub-header .left-content p em {
   font-style: normal;
-  color: #9c2c34;
+  color: #6f0000;
 }
 
 .background-header {
@@ -396,11 +396,11 @@ header
 }
 
 .background-header .main-nav .nav li:hover a {
-  color: #9c2c34 !important;
+  color: #6f0000 !important;
 }
 
 .background-header .nav li a.active {
-  color: #9c2c34 !important;
+  color: #6f0000 !important;
 }
 
 .header-area {
@@ -445,7 +445,7 @@ header
   transition: all 0.3s ease 0s;
 }
 .header-area .main-nav .logo #subcolor {
-  color: #9c2c34;
+  color: #6f0000;
 }
 
 .background-header .main-nav .logo {
@@ -528,12 +528,12 @@ header
 }
 .header-area .main-nav .nav li:hover a,
 .header-area .main-nav .nav li a.active {
-  color: #9c2c34 !important;
+  color: #6f0000 !important;
 }
 
 .background-header .main-nav .nav li:hover a,
 .background-header .main-nav .nav li a.active {
-  color: #9c2c34 !important;
+  color: #6f0000 !important;
   opacity: 1;
 }
 
@@ -595,7 +595,7 @@ header
 
 .header-area .main-nav .nav li.has-sub ul li a:hover {
   background: #fff;
-  color: #9c2c34 !important;
+  color: #6f0000 !important;
   padding-left: 25px;
 }
 
@@ -1117,7 +1117,7 @@ section.upcoming-meetings .categories ul li a {
 }
 
 section.upcoming-meetings .categories ul li a:hover {
-  color: #9c2c34;
+  color: #6f0000;
 }
 
 section.upcoming-meetings .categories .main-button-red {
@@ -1177,7 +1177,7 @@ section.upcoming-meetings .categories .main-button-red a {
   font-size: 13px;
   text-transform: uppercase;
   font-weight: 600;
-  color: #9c2c34;
+  color: #6f0000;
 }
 
 .meeting-item .down-content .date span {
@@ -1269,7 +1269,7 @@ section.apply-now .item p {
   transition: transform 200ms ease-in-out;
 }
 .accordion-head.is-open {
-  color: #9c2c34;
+  color: #6f0000;
   border-bottom: none;
 }
 .accordion-head.is-open .icon {
@@ -1639,12 +1639,9 @@ heading page
 */
 
 section.heading-page {
-  /* background-image: url(../images/heading-bg.jpg); */
-  /* background-position: center center;
-  background-repeat: no-repeat; */
-  /* background-size: cover; */
   padding-top: 230px;
   padding-bottom: 110px;
+  height: 500px;
   text-align: center;
 }
 
@@ -2026,7 +2023,7 @@ responsive
 }
 
 .title-heading {
-  background-color: #9c2c34;
+  background-color: #6f0000;
   color: white;
   height: 50px;
   border-top-left-radius: 20px;
@@ -2068,7 +2065,7 @@ responsive
 .heading-right-sidebar {
   margin-left: 45px;
   color: white;
-  background-color: #9c2c34;
+  background-color: #6f0000;
   padding: 15px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
@@ -2192,7 +2189,7 @@ input:checked + .box .box-close {
   font-weight: 500;
 }
 .arrows section .box-title:hover {
-  color: #9c2c34;
+  color: #6f0000;
   cursor: pointer;
 }
 .arrows section .box-title:before {
@@ -2221,7 +2218,7 @@ input:checked + section.box .box-title:before {
 #headingBody {
   font-family: "Arima", cursive;
   color: white;
-  text-shadow: 5px 5px 10px #9c2c34;
+  text-shadow: 5px 5px 10px #6f0000;
 }
 
 /* eligibility conditions */
@@ -2295,7 +2292,7 @@ div.eligibility img {
   text-decoration: none;
 }
 .news-section li a:hover {
-  color: #9c2c34;
+  color: #6f0000;
   text-decoration: none;
 }
 @media (max-width: 992px) {
@@ -2337,7 +2334,7 @@ div.eligibility img {
   border-radius: 50%;
 }
 .testimonial-item h5 {
-  color: #9c2c34;
+  color: #6f0000;
   font-family: "Great Vibes", cursive;
   font-weight: bold;
   margin-bottom: 0px;
@@ -2353,14 +2350,14 @@ div.eligibility img {
   border: 1px solid rgba(97, 120, 76, 0.71);
   padding: 10px;
   color: #ffffff;
-  text-shadow: 1px 1px 1px #9c2c34;
+  text-shadow: 1px 1px 1px #6f0000;
   font-size: 12px;
   line-height: 1.2rem;
   font-weight: bold;
   text-align: justify;
 }
 .testimonial-item p a {
-  color: #9c2c34;
+  color: #6f0000;
   text-shadow: 0 1px 1px #fff;
 }
 .testimonial-item > span {
@@ -2368,7 +2365,7 @@ div.eligibility img {
 }
 .testimonial-item > span:nth-of-type(1) {
   font-size: 14px;
-  color: #9c2c34;
+  color: #6f0000;
   text-shadow: 0 1px 1px #fff;
   font-style: italic;
 }
@@ -2379,6 +2376,288 @@ div.eligibility img {
 .testimonial-item > span:nth-of-type(2) {
   font-size: 14px;
   color: #cef0d4;
-  text-shadow: 0 1px 1px #9c2c34;
+  text-shadow: 0 1px 1px #6f0000;
   font-style: italic;
+}
+
+/* dept home page */
+.meetings-page h4 {
+  padding-bottom: 10px;
+  border-bottom: #6f0000 dotted 4px;
+}
+.block-dept {
+  margin-top: 20px;
+}
+.arrow-symbol {
+  height: 15px;
+  width: 15px;
+}
+
+/* dept table css */
+
+.dept-content-table {
+  margin-top: 20px;
+}
+
+/* dept home page links gallery */
+.details-dept {
+  margin-top: 40px;
+  display: flex;
+  gap: 2rem;
+}
+.dept-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background: #200122; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #200122,
+    #6f0000
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #200122,
+    #6f0000
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  border: #2a2a2a solid 1px;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  border-radius: 20px;
+  height: 200px;
+}
+.dept-card .blur-it {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* From https://css.glass */
+  background: rgba(101, 74, 74, 0.44);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(101, 74, 74, 0.71);
+  height: 70%;
+  width: 80%;
+}
+.blur-it > h4 {
+  border: none;
+  padding: 20px;
+  text-align: center;
+}
+.bluer-it > h4 > a:hover {
+  cursor: pointer;
+}
+@media (max-width: 992px) {
+  .details-dept {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .dept-card {
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+/* faculty-profile */
+
+.faculty-profile {
+  margin-top: 20px;
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  justify-content: center;
+}
+.faculty-profile .flip-card {
+  perspective: 1000px;
+  background: #200122; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #200122,
+    #6f0000
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #200122, #6f0000);
+  border-radius: 40px;
+  padding: 20px;
+  height: 400px;
+  width: 25vw;
+}
+
+.flip-card-inner {
+  position: relative;
+  border-radius: 20px;
+  border: 3px solid white;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.3rem;
+}
+
+.flip-card-front img {
+  width: 150px;
+  border-radius: 50%;
+}
+
+.flip-card-back {
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  border-radius: 20px;
+  background: #200122; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #200122,
+    #6f0000
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #200122, #6f0000);
+  color: white;
+  transform: rotateY(180deg);
+}
+.flip-card-back .contact img {
+  width: 60px;
+  height: 50px;
+}
+
+@media (max-width: 992px) {
+  .faculty-profile {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .faculty-profile .flip-card {
+    width: 100%;
+  }
+}
+/* hod design */
+.hod-message {
+  display: flex;
+  gap: 6rem;
+  text-align: justify;
+  justify-content: space-between;
+  width: fit-content;
+}
+
+.hod-message img {
+  border-radius: 50%;
+}
+.hod-message figcaption {
+  font-style: italic;
+  font-size: 13px;
+  text-align: center;
+  font-weight: bold;
+}
+
+@media (max-width: 992px) {
+  .hod-message {
+    flex-direction: column;
+    gap: 2rem;
+    align-items: center;
+  }
+  .hod-message img {
+    width: 200px;
+  }
+  .hod-message figcaption {
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 1199px) {
+  .hod-message {
+    gap: 2rem;
+  }
+  .hod-message img {
+    width: 150px;
+  }
+}
+
+/* Training and Placement */
+.tnp {
+  display: flex;
+  text-align: justify;
+  gap: 17rem;
+}
+.tnp-introduction {
+  flex-grow: 1;
+}
+.tnp h4 {
+  width: fit-content;
+  padding-bottom: 10px;
+  border-bottom: #6f0000 dotted 4px;
+}
+.tnp-introduction p {
+  line-height: 1.5rem;
+  font-size: 14px;
+}
+.tnp-team {
+}
+
+/* dept placement */
+.dept-placement {
+  text-transform: uppercase;
+  text-align: center;
+  border-bottom: 4px dotted #6f0000;
+  width: fit-content;
+  margin-top: 20px;
+}
+.data-placement {
+  height: 500px;
+  overflow: auto;
+  margin-top: 40px;
+}
+.data-placement table thead {
+  font-weight: bold;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: white;
+}
+
+/* dept-contact */
+.contact-dept {
+  display: flex;
+  gap: 3rem;
+  margin-top: 20px;
+}
+.contact-info {
+  margin-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 4px dotted #6f0000;
+  width: fit-content;
+}
+@media (max-width: 992px) {
+  .contact-dept {
+    flex-direction: column;
+    gap: 2rem;
+  }
 }
