--- a/aboutus/aboutus.css
+++ b/aboutus/aboutus.css
@@ -20,6 +20,17 @@
   text-align: center;
   font-style: italic;
 }
+#motivation {
+  margin-top: 20px;
+  font-weight: bold;
+  font-size: 24px;
+  text-align: center;
+  line-height: 2.5rem;
+  display: block;
+  font-style: italic;
+  color: #6f0000;
+  text-transform: uppercase;
+}
 @media (max-width: 992px) {
   .org-body {
     flex-direction: column;
