Diploma Programs modified

--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -2692,3 +2692,17 @@ div.eligibility img {
     width: 100%;
   }
 }
+
+/* overflow table */
+.data-overflow {
+  overflow: auto;
+  margin-top: 40px;
+}
+.data-overflow table thead {
+  font-weight: bold;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: white;
+}
