--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -1513,18 +1513,18 @@ contact us
 */
 
 section.contact-us {
-  /* background-image: url(../images/meetings-bg.jpg);*/
+  background-image: url(../images/meetings-bg.jpg);
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 140px 0px 0px 0px;
+  padding-top: 50px;
 }
 
 section.contact-us #contact {
   background-color: #fff;
   border-radius: 20px;
-  padding: 40px;
+  padding: 60px;
 }
 
 section.contact-us #contact h2 {
@@ -2761,4 +2761,50 @@ div.eligibility img {
 }
 .nss-image img {
   width: 500px;
+}
+
+/* footer information */
+.footer-information {
+  display: flex;
+  gap: 2rem;
+  align-items: baseline;
+  justify-content: space-around;
+  margin-bottom: 20px;
+  color: white;
+}
+@media (max-width: 992px) {
+  .footer-information {
+    flex-direction: column;
+    gap: 2rem;
+  }
+}
+
+.footer-map {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.inst-basic-information {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.about-us {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.about-us p {
+  color: white;
+}
+.impt-link {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.impt-link p {
+  color: white;
+}
+.inst-basic-information p {
+  color: white;
 }
