College Highlights and More testimonials

--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -1086,6 +1086,16 @@ section.upcoming-meetings {
   padding-bottom: 110px;
 }
 
+section.college-highlights {
+  /*background-image: url(../images/meetings-bg.jpg);*/
+  background-position: center center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 100px;
+  padding-bottom: 110px;
+}
+
 section.upcoming-meetings .section-heading {
   text-align: center;
 }
