--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -2403,6 +2403,12 @@ div.eligibility img {
 }
 
 /* dept home page */
+.dept-home-link {
+  color: white;
+}
+.dept-home-link:hover {
+  color: #6f0000;
+}
 .meetings-page h4 {
   padding-bottom: 10px;
   border-bottom: #6f0000 dotted 4px;
